--- a/AquAnalyzerWebApp/Components/Pages/Login.razor
+++ b/AquAnalyzerWebApp/Components/Pages/Login.razor
@@ -2,6 +2,7 @@
 @using System.Security.Claims
 @using AquAnalyzerAPI.Services
 @using AquAnalyzerAPI.Interfaces
+@using System.ComponentModel.DataAnnotations
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
 
@@ -40,16 +41,10 @@
 </div>
 
 @code {
-    private EditContext editContext; // Tracks form state and validation
+    private EditContext editContext = new(new LoginModel()); // Tracks form state and validation
     private LoginModel loginModel = new(); // Encapsulate form data into a model
     private string? ErrorMessage;
     private bool IsLoading = false;
-
-    protected override void OnInitialized()
-    {
-        // Initialize EditContext with the LoginModel for validation tracking
-        editContext = new EditContext(loginModel);
-    }
 
     private async Task Authenticate()
     {
@@ -97,7 +92,10 @@
     // LoginModel class to encapsulate form inputs
     public class LoginModel
     {
+        [Required(ErrorMessage = "Username is required.")]
         public string Username { get; set; } = string.Empty;
+
+        [Required(ErrorMessage = "Password is required.")]
         public string Password { get; set; } = string.Empty;
     }
 }
