--- a/AquAnalyzerWebApp/Components/Pages/Login.razor
+++ b/AquAnalyzerWebApp/Components/Pages/Login.razor
@@ -2,6 +2,7 @@
 @using System.Security.Claims
 @using AquAnalyzerAPI.Services
 @using AquAnalyzerAPI.Interfaces
+@using AquAnalyzerWebApp.Services
 @using System.ComponentModel.DataAnnotations
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
