--- a/AquAnalyzerWebApp/Components/Pages/ReportPage.razor
+++ b/AquAnalyzerWebApp/Components/Pages/ReportPage.razor
@@ -11,22 +11,21 @@
             <h3>@report.Title</h3>
             <p>@report.Description</p>
             @* <p>Generated on: @report.GeneratedDate</p> *@
-        </div>
 
-        @* @if (report.Visualisations != null && report.Visualisations.Any())
-        {
-            <div>
-                @foreach (var visualisation in report.Visualisations)
-                {
-                    <Visualisation VisualisationData="visualisation" />
-                }
-            </div>
-        }
-        else
-        {
-            <p>No visualizations to display.</p>
-        }
-        *@
+            @if (report.Visualisations != null && report.Visualisations.Any())
+            {
+                <div class="visualisations">
+                    @foreach (var visualisation in report.Visualisations)
+                    {
+                        <Visualisation VisualisationData="visualisation" />
+                    }
+                </div>
+            }
+            else
+            {
+                <p>No visualizations to display.</p>
+            }
+        </div>
     }
 }
 else
@@ -70,6 +69,10 @@ else
 
     .report-card p:last-child {
         margin-bottom: 0; /* Remove space below the last paragraph */
+    }
+
+    .visualisations {
+        margin-top: 16px; /* Space above the visualisations */
     }
 
     .loading {
