--- a/AquAnalyzerWebApp/Components/_Imports.razor
+++ b/AquAnalyzerWebApp/Components/_Imports.razor
@@ -9,4 +9,6 @@
 @using System
 @using System.Linq
 @using AquAnalyzerWebApp.Interfaces
+@using AquAnalyzerWebApp
 @using AquAnalyzerAPI.Models
+@using AquAnalyzerAPI
