Add API endpoints for water data management and update Visualisation component

--- a/AquAnalyzerWebApp/Components/Visualisation.razor
+++ b/AquAnalyzerWebApp/Components/Visualisation.razor
@@ -1,4 +1,4 @@
-@using AquAnalyzerAPI.Models
+@* @using AquAnalyzerAPI.Models
 @inject IVisualisationPageService VisualisationPageService;
 
 <div class="visualisation">
@@ -83,4 +83,4 @@
         margin-bottom: 0;
         /* Remove space below the last paragraph */
     }
-</style>
+</style> *@
